[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-backtrace = "0.5.1"
color-eyre = "0.6.2"
day1 = { version = "0.1.0", path = "../day1" }
day2 = { version = "0.1.0", path = "../day2" }
day3 = { version = "0.1.0", path = "../day3" }
day4 = { version = "0.1.0", path = "../day4" }
