[package]
name = "day15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
color-eyre = "0.6.2"
grid = "0.9.0"
itertools = "0.10.5"
nom = "7.1.1"
nom-supreme = "0.8.0"
nom_locate = "4.0.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
test-case = "2.2.2"
