[package]
name = "day16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
color-backtrace = "0.5.1"
color-eyre = "0.6.2"
derive_more = "0.99.17"
itertools = "0.10.5"
nom = "7.1.1"
nom-supreme = "0.8.0"
nom_locate = "4.0.0"
pathfinding = "4.1.1"
pretty_assertions = "1.3.0"
regex = "1.7.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
test-case = "2.2.2"
