[package]
name = "day16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
itertools = "0.10.5"
nom = "7.1.1"
nom-supreme = "0.8.0"
nom_locate = "4.0.0"
pathfinding = "4.1.1"
pretty_assertions = "1.3.0"
regex = "1.7.0"
