[package]
name = "day17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
color-eyre = "0.6.2"
derivative = "2.2.0"
itertools = "0.10.5"
nom = "7.1.1"
nom-supreme = "0.8.0"
nom_locate = "4.0.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"

[dev-dependencies]
test-case = "2.2.2"
